Version 1.1.0
------------------

As of this release, rentrez will use httr::POST when sending > 200 ids to the
NCBI. This should make working with large ID sets easier (thanks to the NCBI for
supporing the POST methods, Reed Cartwright and Chris Stubben for pushing me on
the issue). 

Other minor changes:
    * Pass on error messages from NCBI when too many records are requested from 
      `entrez_summary`

Version 1.0.4
------------------
Update to documentation and tests to accommodate versioned accessions now
available from NCBI (see ?entrez_fetch and the vignette)

Version 1.0.3
------------------  
Update to only use https
    * NCBI is goinh all https, rentrez will only use https from now on.
    * Added links to repo/bug reporting to DESCRIPTION 
    * Documented changes to sequence database XML records
    * Allow automatic parsing of XML flavours


Version 1.0.2
-------------------
Bug fix release
    * Tests now work with testthat 1.0.0 
    * All calls to ncbi specify encoding is UTF-8 (saving error messages)
    * HTTP Error codes associated with large requests now give the user a hint
      to check out the documentation for web-history features

Version 1.0.1
-------------------
Bug fix release
    * Properly format "by_id" mode URLS (bug exposed by httr 1.0.1)
    * Handle case in which some IDs passed to "by_id" mode are invalide (thanks
      Zachary Foster for report)
    * Documentation updated to reflect OMIM->SNP links no longer possible
    * Use Rmarkdown (not knitr) as vignette builder
    * Return NCBI error messages are text when they exist

Version 1.0.0
--------------------
    * new function extract_from_esummary() for extracting like-named elements
      from a list esummary records (e.g. get all "Title" fields from a list of 
      PubMed esummaries)
    * Support for `cmd` option in entrez_link (breaks backward compatibility)
        * Allows discovery of external links from and use of web_history